--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
+		"@sveltejs/adapter-node": "^5.2.13",
 		"lucide-svelte": "^0.525.0",
 		"svelte-sonner": "^1.0.5"
 	}
